<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="FizzBuzz" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 / 5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1A-Ui-a2a">
                                <rect key="frame" x="315.5" y="28" width="43.5" height="27.5"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <color key="textColor" red="0.82352941180000006" green="0.92549019610000005" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XRR-i8-mb8">
                                <rect key="frame" x="48.5" y="195" width="278" height="277.5"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kiZ-qP-bqi">
                                        <rect key="frame" x="0.0" y="0.0" width="278" height="135"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LrL-Yu-GKZ">
                                                <rect key="frame" x="0.0" y="0.0" width="135" height="135"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="135" id="sdG-XW-YN3"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                                <state key="normal" title="0" backgroundImage="white_button_border">
                                                    <color key="titleColor" red="0.82352941180000006" green="0.92549019610000005" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="numberTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X8L-zA-azJ"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5C-xu-2vL">
                                                <rect key="frame" x="143" y="0.0" width="135" height="135"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fizzButton"/>
                                                <state key="normal" image="champagne" backgroundImage="white_button_border"/>
                                                <connections>
                                                    <action selector="numberTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pAs-3h-xKz"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="NQU-FH-1Zi">
                                        <rect key="frame" x="0.0" y="143" width="278" height="134.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLe-Cz-t2H">
                                                <rect key="frame" x="0.0" y="0.0" width="135" height="134.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="buzzButton"/>
                                                <state key="normal" image="lightning" backgroundImage="white_button_border"/>
                                                <connections>
                                                    <action selector="numberTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hF5-Ys-2dH"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="syH-yC-wjj">
                                                <rect key="frame" x="143" y="0.0" width="135" height="134.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fizzBuzzButton"/>
                                                <state key="normal" image="space" backgroundImage="white_button_border"/>
                                                <connections>
                                                    <action selector="numberTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yaj-Uv-tpi"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="XRR-i8-mb8" secondAttribute="height" multiplier="1:1" id="moA-qi-0CU"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTN-1H-Lxa">
                                <rect key="frame" x="260" y="619" width="99" height="40"/>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                <state key="normal" title="Play Again">
                                    <color key="titleColor" red="0.82352941176470584" green="0.92549019607843142" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.094117647058823528" green="0.56862745098039214" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="XRR-i8-mb8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0W6-Ii-B1M"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UTN-1H-Lxa" secondAttribute="bottom" constant="8" id="GNO-K5-dZh"/>
                            <constraint firstItem="x1A-Ui-a2a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="QQK-Dy-aDH"/>
                            <constraint firstItem="XRR-i8-mb8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UIJ-cI-Vs5"/>
                            <constraint firstItem="x1A-Ui-a2a" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gxT-52-pOG"/>
                            <constraint firstItem="UTN-1H-Lxa" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="h1M-nM-QHa"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="buzzButton" destination="RLe-Cz-t2H" id="bq1-JP-Nl2"/>
                        <outlet property="fizzButton" destination="d5C-xu-2vL" id="Jgx-ld-ahs"/>
                        <outlet property="fizzBuzzButton" destination="syH-yC-wjj" id="SpS-5w-cH4"/>
                        <outlet property="scoreLabel" destination="LrL-Yu-GKZ" id="JwT-DN-PbW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
        </scene>
    </scenes>
    <resources>
        <image name="champagne" width="49" height="50"/>
        <image name="lightning" width="29" height="50"/>
        <image name="space" width="47" height="50"/>
        <image name="white_button_border" width="215" height="210"/>
    </resources>
</document>
